--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "watch": "npm run watch-compile"
   },
   "dependencies": {
-    "thinkjs": "2.0.x",
     "babel": "5.8.21",
-    "babel-runtime": "5.6.17"
+    "babel-runtime": "5.6.17",
+    "marked": "^0.3.5",
+    "material-design-lite": "^1.0.6",
+    "mongodb": "^2.0.48",
+    "nunjucks": "^2.2.0",
+    "socket.io": "^1.3.7",
+    "thinkjs": "2.0.x"
   }
 }
